fixed some tests, attempted to fix some more, unsuccesfully